[package]
name = "scenic_rs"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast Rust backend for SCENIC gene regulatory network inference"
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
arrow = { version = "53", default-features = false, features = ["ipc", "ipc_compression"] }
