[package]
name = "scenic_rs"
version = "0.2.3"
edition = "2021"
description = "Rust implementation of the SCENIC gene regulatory network pipeline"
license = "GPL-3.0-or-later"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
numpy = "0.29"
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
arrow = { version = "59", default-features = false, features = ["ipc", "ipc_compression"] }
