[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scenic-rs"
version = "0.1.0"
description = "Rust implementation of the SCENIC single-cell GRN pipeline (GRN + cisTarget + AUCell)"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
dependencies = ["numpy", "pandas"]

[project.optional-dependencies]
# scanpy is only needed for read_cellranger (loading Cell Ranger / .h5ad data):
#   pip install "scenic-rs[cellranger]"
cellranger = ["scanpy"]

[tool.maturin]
python-source = "python"
module-name = "scenic_rs._core"
features = ["pyo3/extension-module"]
