[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scenic-rs"
# Version is single-sourced from Cargo.toml (see [package].version) via maturin's
# `dynamic` support, so it only ever lives in one place. release-please bumps it there.
dynamic = ["version"]
description = "Rust implementation of the SCENIC single-cell GRN pipeline (GRN + cisTarget + AUCell)"
# Long description shown on the PyPI project page (rendered from the README).
# Without this, PyPI shows "author has not provided a project description".
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
# Keep this list minimal and UNPINNED on purpose: the heavy compute is in the
# Rust abi3 extension, so there is no numba/Cython stack forcing an old numpy.
# The CI compat matrix (.github/workflows/ci.yml) is what guards this claim --
# it runs the test suite against numpy 1.26 + numpy 2.x, old/new pandas, and an
# env with scanpy installed. If a pin ever sneaks in, that matrix goes red.
dependencies = ["numpy", "pandas"]
# Trove classifiers. The Python ones populate the pypi/pyversions badge (shields
# reads these classifiers, not requires-python). No "License ::" classifier --
# the SPDX `license` field above already declares it (PEP 639).
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "maturin>=1.0,<2.0"]

[project.urls]
Homepage = "https://github.com/nglaszik/SCENIC-rs"
Repository = "https://github.com/nglaszik/SCENIC-rs"
Issues = "https://github.com/nglaszik/SCENIC-rs/issues"

[tool.maturin]
python-source = "python"
module-name = "scenic_rs._core"
features = ["pyo3/extension-module"]

[tool.ruff]
# Lint the hand-written Python surface. The bench/ and examples/ scripts are
# research/validation code with looser conventions; add them here when ready.
include = ["python/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is not worth gating CI on

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
